--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pysnyk"
-version = "0.7.0"
+version = "0.8.0"
 description = "A Python client for the Snyk API"
 authors = [
   "Gareth Rushgrove <garethr@snyk.io>",
@@ -18,6 +18,7 @@ requests = "^2.22"
 mashumaro = "^3"
 importlib_metadata = "^4.4"
 retry = "^0.9.2"
+deprecation = "^2.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
